# LineLaserDetection

CameraCalibration/: CMakeLists.txt
CameraCalibration/config/: CameraSelfCheckRoi.yml  NavLineCheckRoi.yml  camera_calibration.txt  quad_roi.txt
CameraCalibration/include/: camera_functions.h  roi_selector.h
CameraCalibration/src/: camera_functions.cpp  main.cpp  roi_selector.cpp  test_quad_roi.cpp
NavigationLineDetection/: CMakeLists.txt
NavigationLineDetection/config/: CAMERA_CALIBRATION.ini  ROI_CONFIG.ini  SelfCheckCenterPoint.yml
NavigationLineDetection/include/: lidar_line_detection.h
NavigationLineDetection/src/: camera_stability_detection.cpp  lidar_line_detection.cpp  lidar_test_main.cpp  quad_roi_test.cpp
NavigationLineDetection/total_config/PV31_#1_config/: CameraSelfCheckRoi.yml  NavLineCheckRoi.yml  SelfCheckCenterPoint.yml
NavigationLineDetection/total_config/PV31_#2_config/: CameraSelfCheckRoi.yml  NavLineCheckRoi.yml  SelfCheckCenterPoint.yml
NavigationLineDetection/total_config/PV31_#3_config/: CameraSelfCheckRoi.yml  NavLineCheckRoi.yml  SelfCheckCenterPoint.yml
NavigationLineDetection/total_config/PV31_#4_config/: CameraSelfCheckRoi.yml  NavLineCheckRoi.yml  SelfCheckCenterPoint.yml
